--- a/css/style.scss
+++ b/css/style.scss
@@ -510,13 +510,148 @@ section{
     color: #fff
 }
  }
+.breadcrumb{
+    background: none;
+    margin-top: -20px;
+    padding:8px 0;
 
 
+    li a{
+        color: #707070;
+        font-size: 13px;
+        text-decoration: underline;
+    }
+    
+}
+.breadcrumb>li+li:before{
+    content:'>';
+    color: #707070;
+}
+
+.header{
+
+    .search-wrap{
+        float: left;
+        margin: 20px 0;
+        border: 1px solid #D3D3D3;
+        width: 100%;
+        background: #F7F5F4;
+
+        input{
+            padding:10px 20px
+        }
+
+        .search-btn{
+            top:5px;
+            right:10px
+        }
+    }
+}
 
 
+.search-list-wrap{
 
+   
+    .search-txt{
+        font-size: 16px;
+        color: #000;
+        margin-bottom: 20px;
+    }
 
+    .search-list{
 
+        li{
+            transition: 0.5s all;
+            &:hover{
+                background: #F7F5F4;
+                box-shadow: 0 6px 8px #00000017;
+            }
+            span{
+
+                display: block;
+            }
+
+            img{
+                margin-bottom: 20px;
+            }
+            padding:25px;
+            border:1px solid #D6D6D6;
+            overflow: hidden;
+            margin-bottom: 20px;
+            .list-heading{
+                font-size: 20px;
+                color: #000;
+                font-weight: 700;
+                font-family: 'Nunito', sans-serif;
+                margin-bottom: 5px;
+
+            }
+
+            .list-sub-heading{
+                font-size: 14px;
+                color: #2B2B2B;
+                margin-bottom: 20px;
+            }
+            p{
+                color: #707070;
+                font-size: 14px;
+            }
+
+            .sm-txt{
+                font-size: 13px;
+                color: #707070;
+            }
+            .primary-btn{
+
+                margin-top: 50px;
+            }
+        }
+    }
+}
+
+.primary-btn,.primary-btn:hover,.primary-btn:focus{
+    font-size: 14px;
+    color:#fff;
+    background: #67D88D;
+    padding:10px;
+    display: inline-block;
+    font-weight: 700;
+
+}
+.pagination{
+    vertical-align: middle;
+    margin-left: 20px;
+
+    li{
+        a{
+            border: 1px solid #707070;
+            padding: 3px 8px;
+            font-size: 14px;
+            color: #000;
+            margin: 0 3px;
+            &.active{
+                color: #FF6347;
+            }
+        }
+         span{
+             padding: 3px 8px;
+         }
+    }
+
+    
+}
+.pagination>li:first-child>a, .pagination>li:first-child>span{
+    border-radius: 0;
+    margin-right: 3px;
+}
+
+.pagination>li:last-child>a, .pagination>li:last-child>span{
+    border-radius: 0;
+}
+.pagination-txt{
+    vertical-align: middle;
+}
+ 
 
   footer{
     div{
@@ -762,6 +897,28 @@ section{
         }
       }
     }
+
+    .main-content{
+        width:85%;
+        margin: auto;
+    }
+    .header{
+        .search-wrap{
+            width: 25%;
+        }
+    }
+.search-list-wrap{
+    .search-list{
+
+        li{
+            img{
+                margin-bottom: 0;
+            }
+
+           
+        }
+    }
+}
 }
 
 
