--- a/css/style.css
+++ b/css/style.css
@@ -703,15 +703,16 @@ section {
   font-size: 11px;
   color: #040429;
   overflow: hidden;
+  text-align: center;
 }
 
 .login-wrap .login-btn-wrap span, .login-wrap .login-btn-wrap a {
-  vertical-align: middle;
-  display: inline-block;
+  display: block;
 }
 
 .login-wrap .login-btn-wrap span {
   padding-top: 15px;
+  margin-bottom: 15px;
 }
 
 .login-wrap .link-blue {
@@ -735,7 +736,7 @@ section {
   width: 50px;
   height: 50px;
   display: inline-block;
-  margin-right: 20px;
+  margin-right: 15px;
   border: 2px solid #FF5B4A;
   padding: 10px;
 }
@@ -783,6 +784,10 @@ section {
 
 .login-msg-wrap {
   margin-top: 50px;
+}
+
+.verify-btn {
+  margin-top: 15px;
 }
 
 footer {
@@ -1016,6 +1021,19 @@ footer .copy-right .footer-img-wrap {
   }
   .login-wrap .login-img-wrap {
     margin-top: 35px;
+  }
+  .login-wrap .login-btn-wrap {
+    text-align: left;
+  }
+  .login-wrap .login-btn-wrap a, .login-wrap .login-btn-wrap span {
+    display: inline-block;
+    vertical-align: middle;
+  }
+  .login-wrap .login-btn-wrap .login-btn {
+    margin-left: 115px;
+  }
+  .login-wrap .login-btn-wrap .verify-btn {
+    margin-left: 85px;
   }
   .otp-wrap {
     text-align: left;
