--- a/css/style.scss
+++ b/css/style.scss
@@ -705,14 +705,15 @@ section{
         font-size: 11px;
         color: #040429;
         overflow: hidden;
-
+        text-align: center;
         span,a{
-            vertical-align: middle;
-            display: inline-block;
+            
+            display: block;
         }
 
         span{
             padding-top: 15px;
+            margin-bottom: 15px;
         }
     }
 
@@ -735,7 +736,7 @@ section{
         width: 50px;
         height: 50px;
         display: inline-block;
-        margin-right: 20px;
+        margin-right: 15px;
         border: 2px solid #FF5B4A;
         padding: 10px;
     }
@@ -784,6 +785,9 @@ section{
     margin-top: 50px;
 }
 
+.verify-btn{
+    margin-top: 15px;
+}
 
 
 
@@ -1073,6 +1077,22 @@ section{
 
 
         margin-top: 35px;
+    }
+
+    .login-btn-wrap{
+        text-align: left;
+        a,span{
+            display: inline-block;
+            vertical-align: middle;
+        }
+
+        .login-btn{
+            margin-left: 115px;
+        }
+
+        .verify-btn{
+            margin-left: 85px;
+        }
     }
 }
 
