--- a/css/style.scss
+++ b/css/style.scss
@@ -715,6 +715,9 @@ section{
             padding-top: 15px;
             margin-bottom: 15px;
         }
+        .login-btn{
+            display: block;
+        }
     }
 
     .link-blue{
