--- a/css/style.css
+++ b/css/style.css
@@ -716,7 +716,7 @@ section {
 }
 
 .login-wrap .login-btn-wrap .login-btn {
-  display: block;
+  margin-bottom: 15px;
 }
 
 .login-wrap .link-blue {
@@ -740,7 +740,7 @@ section {
   width: 50px;
   height: 50px;
   display: inline-block;
-  margin-right: 15px;
+  margin-right: 10px;
   border: 2px solid #FF5B4A;
   padding: 10px;
 }
@@ -1037,7 +1037,7 @@ footer .copy-right .footer-img-wrap {
     margin-left: 115px;
   }
   .login-wrap .login-btn-wrap .verify-btn {
-    margin-left: 85px;
+    margin-left: 75px;
   }
   .otp-wrap {
     text-align: left;
