--- a/css/style.scss
+++ b/css/style.scss
@@ -709,6 +709,7 @@ section{
         span,a{
             
             display: block;
+           
         }
 
         span{
@@ -716,7 +717,8 @@ section{
             margin-bottom: 15px;
         }
         .login-btn{
-            display: block;
+           
+            margin-bottom: 15px;
         }
     }
 
@@ -739,7 +741,7 @@ section{
         width: 50px;
         height: 50px;
         display: inline-block;
-        margin-right: 15px;
+        margin-right: 10px;
         border: 2px solid #FF5B4A;
         padding: 10px;
     }
@@ -1094,7 +1096,7 @@ section{
         }
 
         .verify-btn{
-            margin-left: 85px;
+            margin-left: 75px;
         }
     }
 }
