--- a/css/style.scss
+++ b/css/style.scss
@@ -795,7 +795,9 @@ section{
 }
 
 
-
+.fgt-pwd-link{
+    text-align: center;
+}
 
 
 
@@ -1104,7 +1106,9 @@ section{
 .otp-wrap{
     text-align: left;
 }
-
+.fgt-pwd-link{
+    text-align: left;
+}
 
 }
 
