--- a/css/style.scss
+++ b/css/style.scss
@@ -480,6 +480,7 @@ section{
         img{
              
             margin-bottom: 20px;
+            width: 100%;
              
         }
         a{
@@ -1031,6 +1032,7 @@ section{
         img{
             
             margin-bottom: 25px;
+            width:auto
         }
        }
 
