--- a/css/style.css
+++ b/css/style.css
@@ -853,7 +853,7 @@ section {
 
 .dropdown-menu {
   width: 342px;
-  left: 108px;
+  left: 0px;
   padding: 0 30px 30px;
   border-radius: 0;
   border: 1px solid #D6D6D6;
@@ -1352,6 +1352,9 @@ footer .copy-right .paypal {
   .school-list-item .code {
     text-align: right;
     margin: 0;
+  }
+  .dropdown-menu {
+    left: 108px;
   }
 }
 
