--- a/css/style.css
+++ b/css/style.css
@@ -912,7 +912,7 @@ section {
   color: #F75842;
   font-size: 18px;
   display: block;
-  text-align: center;
+  text-align: right;
   font-family: Nunito;
   font-weight: 600;
   margin: 15px 0;
