--- a/css/style.css
+++ b/css/style.css
@@ -1350,7 +1350,7 @@ footer .copy-right .paypal {
     margin-bottom: 20px;
   }
   .school-list-item .code {
-    text-align: right;
+    text-align: center;
     margin: 0;
   }
   .dropdown-menu {
