--- a/css/style.scss
+++ b/css/style.scss
@@ -1440,7 +1440,7 @@ padding-right: 20px;
     }
 
     .code{
-        text-align: right;
+        text-align: center;
         margin: 0;
     }
 }
