--- a/css/style.css
+++ b/css/style.css
@@ -1349,7 +1349,7 @@ footer .copy-right .paypal {
     display: block;
     margin-bottom: 20px;
   }
-  .school-list-item .code {
+  .school-list-item .top-section .code {
     text-align: right;
     margin: 0;
   }
