--- a/css/style.scss
+++ b/css/style.scss
@@ -1438,11 +1438,12 @@ padding-right: 20px;
         display: block;
         margin-bottom: 20px;
     }
-
+    .top-section{
     .code{
         text-align: right;
         margin: 0;
     }
+}
 }
 .dropdown-menu{
     left:108px
